--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,4 +32,4 @@ flutter:
   assets:
     # Add assets from the images directory to the application.
     - assets/images/
-    - .env
+    # - .env
