--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ build_and_test_web_app:
   before_script:
     - flutter pub get
   script:
-    - flutter build web
+    - flutter build web --release --web-renderer html --base-href /sushiro-calculator/
   artifacts:
     paths:
       - build/web
