--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
+  flutter_expandable_fab: ^2.2.0
   flutter_localizations:
     sdk: flutter
   http: ^1.2.2
