--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,49 @@
-build_and_test_web_app:
-  stage: build
-  image: ghcr.io/cirruslabs/flutter:stable
-  before_script:
-    - flutter pub get
-  script:
-    - flutter build web --release --base-href /sushiro-calculator/
-  artifacts:
-    paths:
-      - build/web
+name: Build and Deploy Flutter Web to GitHub Pages
 
-pages:
-  stage: deploy
-  script:
-    - cp -r build/web public
-  artifacts:
-    paths:
-      - public
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:  # Allows manual triggering
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: true  # Caches Flutter SDK and pub dependencies
+
+      - name: Install and get dependencies
+        run: flutter pub get
+
+      - name: Build Flutter web
+        run: flutter build web --release --base-href /sushiro-calculator/
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'build/web'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
