--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^3.0.0
+  flutter_gen_runner: ^5.3.2
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
